--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "tsc && node dist/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "redis": "^4.6.7",
     "socket.io": "^4.6.1"
